# model-optimizer

./: c15_add_node.py  c2_add_node.py  feat_modify.py  onnx-single-optimizer.py  onnx-single-rename.py  onnx-single-sanitize.py  onnx_clear.py  onnxruntime_infer.py  surgeon_sanitize.py  trt_infer.py  yolo_merge.py
common/: convert_to_str.py  fold_constatns.py  onnx2trt.py  rename_input_output.py
onnx-test/: onnx-merge.py
ort_plugin/: CMakeLists.txt
ort_plugin/src/: CMakeLists.txt
ort_plugin/src/custom_div/: CMakeLists.txt  custom_div_kernel.cu  custom_div_kernel.h  custom_div_library.cc
trt_plugin/: CMakeLists.txt
trt_plugin/src/: CMakeLists.txt
trt_plugin/src/custom_div/: customdiv_plugin.cu  customdiv_plugin.h
trt_plugin/src/hardswish/: hardswish_plugin.cu  hardswish_plugin.h
